--- a/src/scss/fields/_heading.scss
+++ b/src/scss/fields/_heading.scss
@@ -5,7 +5,7 @@
 	}
 
 	p {
-	  margin-bottom: 0;
+	  margin: $m-0 0 0 0;
 	}
   }
 }
